2001-09-04  Elena Zannoni  <ezannoni@redhat.com>
	
	From Daniel Jacobowitz  <drow@mvista.com>	
	* mdebugread.c (psymtab_to_symtab_1): Handle N_SO stabs without
	a name specially.

2001-09-01  Mark Kettenis  <kettenis@gnu.org>

	Make GDB use libiberty regex implementation.
	* gdb_regex.h: Normalize protection against multiple inclusion.
	Include "xregex.h" instead of "gnu-regex.h".
	* cli/cli-cmds.c: Include "gdb_regex.h" instead of "gnu-regex.h".
	* cli/cli-decode.c: Likewise.
	* Makefile.in (REGEX): Remove.
	(GDB_CFLAGS): Remove reference to gnu-regex.h in comment.
	(ADD_FILES, ADD_DEPS): Remove $(REGEX).
	(POSSLIBS): Remove.
	(TAGFILES_NO_SRCDIR): Remove $(POSSLIBS).
	(irix5-nat.o, solib.o, solib-svr4.o, source.o, symtab.o,
	xcoffsolib.o, cli-decode.o, cli-cmd.o): Replace gnu-regex.h with
	gdb_regex.h in list of dependencies.
	(gnu-regex.o): Remove rule.
	* gnu-regex.c, gnu-regex.h: Remove files.

2001-08-31  Kevin Buettner  <kevinb@redhat.com>

	* ia64-tdep.c (examine_prologue): Don't let a branch unit nop
	terminate the prologue scan.

2001-08-30  Jim Blandy  <jimb@redhat.com>

	* symfile.c (sections_overlap): New function.
	(map_overlay_command): Call sections_overlap, instead of using
	incorrect logic to recognize overlapping sections.

	* symfile.c (load_command): Invalidate the overlay cache.

2001-08-30  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/xm-i386.h (HOST_BYTE_ORDER): Removed.

2001-08-29  Kevin Buettner  <kevinb@redhat.com>

	From 2001-08-07  Daniel Jacobowitz  <drow@mvista.com>:
	* solib-svr4.c (enable_break): Check the inferior link map
	before assuming the inferior PC is at the start of the dynamic
	loader.

2001-08-28  Andrew Cagney  <cagney@toribio.toronto.redhat.com>

	* frame.h (struct frame_info): Fix documentation on fields
	saved_regs, next and prev.

2001-08-23  Mark Kettenis  <kettenis@gnu.org>

	* event-top.c (async_stop_sig) [HAVE_SIGPROCMASK]: Some
	gratuitious whitespace changes.